Actualiza estilos y estructura en proyecto depelis

--- a/detalle.html
+++ b/detalle.html
@@ -6,6 +6,7 @@
   <title>Detalle de Película</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <body>
   <h1>🎬 Detalle de la Película</h1>
   <div id="movie-detail" class="movie-detail"></div>
